feat: added GET User List API
